@@ -2,12 +2,12 @@ package org.openstack4j.openstack.compute.domain;
 
 import java.util.Collections;
 import java.util.List;
-
-import com.fasterxml.jackson.annotation.JsonProperty;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
 import org.openstack4j.openstack.common.ListResult;
+
+import com.fasterxml.jackson.annotation.JsonProperty;
 
 /**
  * Maps to the OpenStack Floating IP Pool specification and used internally to retrieve the list of pool names
@@ -27,7 +27,7 @@ public class NovaFloatingIPPools extends ListResult<String> {
     @Override
     protected List<String> value() {
         if (values != null)
-            return values.stream().map(WrapperToStringFunc.instance).collect(Collectors.toList());
+            return values.stream().map(WrapperToStringFunc.instance).toList();
         return Collections.emptyList();
     }
 
